# bridgelet-core

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  deploy-testnet.yml  test.yml
bridgelet-audit/: README.md
bridgelet-audit/checklists/: mainnet-readiness-ephemeral-account.md  sweep-controller-initialization-checklist.md
bridgelet-audit/glossary/: authorized-destination-lock.md  reserve-reclaim.md  sha256-message-construction.md  sweep-nonce.md  sweep-vs-sweep-claim.md
bridgelet-audit/runbooks/: cross-check-reserve-contract-vs-hardcoded-reserve.md  emergency-destination-lock.md  post-incident-ttl-extension-sweep.md  reserve-contract-admin-key-rotation.md  security-disclosure-triage.md  validate-batch-initialize-salt-uniqueness.md  verify-claim-vs-execute-sweep-nonce-state.md
bridgelet-audit/threat-models/: account-factory-deployment-flow.md  frontrunning-risk.md  replay-nonce-protections.md  reserve-contract-config-flow.md
contracts/account_factory/: Cargo.toml
contracts/account_factory/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/claim_verifier/: Cargo.toml
contracts/claim_verifier/src/: errors.rs  events.rs  lib.rs
contracts/ephemeral_account/: Cargo.toml
contracts/ephemeral_account/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/ephemeral_account/tests/: property_tests.rs
contracts/native_transfer/: Cargo.toml
contracts/native_transfer/src/: errors.rs  events.rs  lib.rs  test.rs
contracts/reserve_contract/: Cargo.toml
contracts/reserve_contract/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: errors.rs  events.rs  interfaces.rs  lib.rs  passphrase.rs  storage_keys.rs  test_utils.rs  types.rs
contracts/sweep_controller/: Cargo.toml
contracts/sweep_controller/src/: authorization.rs  errors.rs  lib.rs  migration.rs  storage.rs  test.rs  transfers.rs
contracts/sweep_controller/tests/: integration.rs
deployment-artifacts/: contract-ids.txt
deployments/: testnet.json
docs/: .gitkeep  DEPENDENCY_PINNING.md  ERROR_CATALOGUE.md  MAINNET_READINESS.md  SIGNATURE_FORMAT.md  STORAGE_AUDIT.md  STORAGE_LAYOUT.md  api-reference.md  architecture.md  base-reserve-handling.md  contract-upgrade-guide.md  cross-contract-safety.md  event-backfill.md  events.md  integration-guide.md  reentrancy-analysis.md  security.md  soroban-sdk-version-policy.md  storage-ttl-strategy.md  testing.md  testnet-deployment.md
scripts/: build.sh  deploy-testnet.sh  test-local.sh  test.sh
tools/event_backfill/: Cargo.toml
tools/event_backfill/src/: backfiller.rs  error.rs  lib.rs  tests.rs  types.rs
tools/event_backfill/tests/: integration_test.rs
tools/sweep-signer/: Cargo.toml
tools/sweep-signer/src/: main.rs
