[workspace]
resolver = "2"
members = [
    "contracts/ephemeral_account",
    "contracts/sweep_controller",
    "contracts/shared",
    "contracts/reserve_contract",
    "contracts/account_factory",
]

# Issue #41: centralise the soroban-sdk version pin for every workspace member.
[workspace.dependencies]
soroban-sdk = "22.0.0"

# Issue #168: cargo-llvm-cov configuration for test coverage reporting.
[workspace.metadata.llvm-cov]
# Exclude WASM-only contracts and shared crate from coverage (they need wasm32 target).
exclude = ["contracts/shared"]
# Target: ≥90% line coverage, ≥80% branch coverage before mainnet.
fail-uncovered-functions = 0

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
