[workspace]
resolver = "2"
members = [
    "contracts/ephemeral_account",
    "contracts/sweep_controller",
    "contracts/shared",
    "contracts/reserve_contract",
    "contracts/account_factory",
]

# Issues #41 / #42: soroban-sdk is pinned to 22.0.0 in exactly one place — here.
# Every workspace member inherits it via `soroban-sdk = { workspace = true }`,
# so no contract declares its own version. See docs/soroban-sdk-version-policy.md
# for the upgrade process (bump here only, then verify on testnet before merge).
[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
