[workspace]
resolver = "2"
members = [
    "contracts/ephemeral_account",
    "contracts/sweep_controller",
    "contracts/shared",
    "contracts/reserve_contract",
    "contracts/account_factory",
]

# Centralised dependency pins inherited via `soroban-sdk = { workspace = true }`
# by `contracts/ephemeral_account`, `contracts/sweep_controller`,
# `contracts/reserve_contract`, and `contracts/shared`. Version is kept in
# lockstep with the `soroban-sdk = "22.0.0"` pin already present in every
# contract's `[dev-dependencies]` and with the `soroban-cli 22.0.0` install
# in `.github/workflows/test.yml`.
[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release] 
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
