[package]
name = "ephemeral_account"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
bridgelet-shared = { path = "../shared", version = "0.1.0" }


[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }