[package]
name = "sweep_controller"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
bridgelet-shared = { path = "../shared", version = "0.1.0" }
# Required by src/lib.rs:8 — `use ephemeral_account::EphemeralAccountContractClient`.
# Mirrors the same `path = "../ephemeral_account"` declaration already present in
# contracts/account_factory/Cargo.toml. Without this dep, cargo test fails on
# sweep_controller with error[E0432]: unresolved import `ephemeral_account`.
ephemeral_account = { path = "../ephemeral_account", version = "0.1.0" }

soroban-token-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
