[package]
name = "sweep-signer"
version = "0.1.0"
edition = "2021"

# Declares this as its own standalone workspace, so cargo doesn't try to
# fold it into the parent bridgelet-core workspace (whose members are all
# built with --target wasm32-unknown-unknown - this tool is a native CLI
# binary and shouldn't be part of that build).
[workspace]

[[bin]]
name = "sweep-signer"
path = "src/main.rs"

[dependencies]
# Pin to the same soroban-sdk version bridgelet-core builds against, so
# Address::to_xdr() serializes identically to what the deployed contract
# expects. Update this if bridgelet-core's soroban-sdk version changes.
soroban-sdk = "22.0.0"

# Same fix as the ed25519-dalek/rand_core conflict you hit building
# bridgelet-core itself. This tool doesn't call SigningKey::generate()
# (Ed25519 signing is deterministic, no RNG needed), so the CryptoRng bound
# never actually gets exercised here - but pinning keeps the whole
# dependency graph consistent and avoids surprises.
ed25519-dalek = "=2.1.1"

# Decodes Stellar S... secret keys / G... addresses directly, so you can
# pass a StrKey secret straight in instead of hand-extracting a raw seed.
stellar-strkey = "0.0.9"

clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"